# advent-of-code-2016

./: .gitignore  Cargo.toml  README.md  index.html
docs/: advent-of-code-2016-1781939f0c7018f.js  advent-of-code-2016-1781939f0c7018f_bg.wasm  advent-of-code-2016-1fdec0e9710ab2e4.js  advent-of-code-2016-1fdec0e9710ab2e4_bg.wasm  advent-of-code-2016-9b5e8d91a2a1b05f.js  advent-of-code-2016-9b5e8d91a2a1b05f_bg.wasm  index.html
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
src/_dayN/: input.txt  mod.rs  solution.rs
src/_day_n/: mod.rs  solution.rs
src/day1/: mod.rs  parse.rs  solution.rs
src/day2/: mod.rs  parse.rs  solution.rs
