[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = "0.21.3"
egui = "0.21.0"
nom = "7.1.3"
tracing-wasm = "0.2.1"
trunk = "0.16.0"
wasm-bindgen-futures = "0.4.34"
